2019-04-04  Per Arne Vollan  <pvollan@apple.com>

        [Win] DumpRenderTreeWatchDog.py is not checked into source
        https://bugs.webkit.org/show_bug.cgi?id=196567
        <rdar://problem/49525901>

        Reviewed by Lucas Forschler.

        This script is used on Win EWS bots to terminate hanging DRT processes.

        * EWSTools/dumprendertreewatchdog.py: Added.

2019-04-04  Chris Dumez  <cdumez@apple.com>

        Unreviewed, roll out r243858 which made tests time out.

        Disable new API tests on Windows instead.

        * TestWebKitAPI/Tests/WebKit/ReloadPageAfterCrash.cpp:
        (TestWebKitAPI::TEST):

2019-04-03  Carlos Garcia Campos  <cgarcia@igalia.com>

        [ATK] Cleanup WebPageAccessibilityObjectAtk
        https://bugs.webkit.org/show_bug.cgi?id=196537

        Reviewed by Michael Catanzaro.

        Also consider files under atk directories as exceptions for GObject conventions.

        * Scripts/webkitpy/style/checkers/cpp.py:
        (check_identifier_name_in_declaration):

2019-04-03  Fujii Hironori  <Hironori.Fujii@sony.com>

        The page's focusedFrame / frameSetLargestFrame do not get cleared on process swap or crash
        https://bugs.webkit.org/show_bug.cgi?id=196588
        <rdar://problem/49365787>

        Unreviewed build fix for Windows port.

        error C3861: 'kill': identifier not found

        * TestWebKitAPI/Tests/WebKit/ReloadPageAfterCrash.cpp:
        (TestWebKitAPI::TEST): Replaced kill with WKPageTerminate.

2019-04-03  Aakash Jain  <aakash_jain@apple.com>

        [ews-build] Cancel build and similar operations should have authentication
        https://bugs.webkit.org/show_bug.cgi?id=196520

        Reviewed by Dewei Zhu.

        * BuildSlaveSupport/ews-build/master.cfg: Configure authentication using admin's username and password from
        environment variables.

2019-04-03  Aakash Jain  <aakash_jain@apple.com>

        [ews-build] Do not trigger queues which are not in production yet