@@ -22,11 +22,16 @@
 
 import os
 
+is_test_mode_enabled = os.getenv('EWS_PRODUCTION') is None
+
 BUG_SERVER_HOST = 'bugs.webkit.org'
 BUG_SERVER_URL = 'https://{}/'.format(BUG_SERVER_HOST)
 PATCH_FOLDER = '/tmp/'
 
-BUILDBOT_SERVER_HOST = 'ews-build.webkit.org'
+if is_test_mode_enabled:
+    BUILDBOT_SERVER_HOST = 'localhost'
+else:
+    BUILDBOT_SERVER_HOST = 'ews-build.webkit.org'
 BUILDBOT_SERVER_PORT = '5555'
 BUILDBOT_TRY_USERNAME = os.getenv('BUILDBOT_TRY_USERNAME', 'sampleuser')
 BUILDBOT_TRY_PASSWORD = os.getenv('BUILDBOT_TRY_PASSWORD', 'samplepass')
