@@ -1,3 +1,12 @@
+2019-04-04  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews-app] configure localhost as BUILDBOT_SERVER_HOST in testing mode
+        https://bugs.webkit.org/show_bug.cgi?id=196620
+
+        Reviewed by Lucas Forschler.
+
+        * BuildSlaveSupport/ews-app/ews/config.py:
+
 2019-04-04  Per Arne Vollan  <pvollan@apple.com>
 
         [Win] DumpRenderTreeWatchDog.py is not checked into source
